--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,7 @@
         {{quote.name}}
       </li>
     </ul>
+    <p *ngIf='quotes.lenght > 1'>Expose the quote that is in your mind!</p>
   </div>
 </div>
 <app-quote></app-quote>
