--- a/src/app/quote-detail/quote-detail.component.html
+++ b/src/app/quote-detail/quote-detail.component.html
@@ -1,4 +1,7 @@
 <!-- <p>quote-detail works!</p> -->
-<p>
-    {{quote.description}}
-</p>
+<!-- <p>
+    {{quote.name}}
+</p> -->
+<p>{{quote.user}}</p>
+    <p>complete in {{quote.completeDate|dateCount}} days</p>
+    <button class="btn btn-danger" (click)='quoteDelete(true)'> Delete quote </button>
