--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -1,11 +1,14 @@
 <!-- <p>quote works!</p> -->
 <div>
-    <h2>Quotes</h2>
+    <!-- <h2>Quotes</h2> -->
     <hr>
     <ul>
-        <li *ngFor='let quote of quotes'>
-            {{quote.name}}
-            <app-quote-detail [quote]='quote'></app-quote-detail>
-        </li>
+        <div *ngFor='let quote of quotes let i=index'>
+            <li>
+                {{quote.name}}
+            </li>
+        </div>
     </ul>
+
+    <app-quote-detail [quote]='quote'></app-quote-detail>
 </div>
