--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -1,14 +1,23 @@
 <!-- <p>quote works!</p> -->
-<div>
+<div class="container">
     <!-- <h2>Quotes</h2> -->
     <hr>
+
     <ul>
-        <div *ngFor='let quote of quotes let i=index'>
-            <li>
-                {{quote.name}}
-            </li>
+        <div class="row">
+            <div class="col-md-6">
+                <div *ngFor='let quote of quotes;let i = index'>
+
+                    <li>
+                        {{quote.name}}
+                    </li>
+                    
+                    <button (click)= 'quoteDelete(true)' class="btn btn-outline-danger">Delete Quote</button>
+
+                    <app-quote-detail *ngIf="quote.showDescription" [quote]='quote' (isComplete)='deleteQuote($event,i)'></app-quote-detail>
+
+                </div>
+            </div>
         </div>
     </ul>
-
-    <app-quote-detail [quote]='quote'></app-quote-detail>
 </div>
