--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -1,23 +1,23 @@
 <!-- <p>quote-form works!</p> -->
-<div class="container-fluid">
+<div class="container-fluid" id="newq">
     <h2 class="text-center">Write a new Quote</h2>
     <hr>
     <form>
         <div class="form-group">
 
-            <label for="name">Name</label>
+            <label for="name">Name of writer</label>
             <input type="text" required class="form-control" id="name">
 
         </div>
         <div class="form-group">
 
-            <label for="description">Description</label>
+            <label for="description">Writeyour quote</label>
             <textarea class="form-control" id="description" rows="4" required></textarea>
 
         </div>
         <div class="form-group">
 
-            <label for="name">Author</label>
+            <label for="name">Author of that quote</label>
             <input type="text" required class="form-control" id="name">
 
         </div>
