--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -18,10 +18,13 @@
 
                 </div>
             </div>
-            
+
             <div class="col-md-6">
-                <app-quote-form></app-quote-form>
+                <app-quote-form (addQuote)="addNewQuote($event)"></app-quote-form>
             </div>
+            <!-- <div class="col-md-6">
+                <app-goal-form (addGoal)="addNewGoal($event)"></app-goal-form>
+            </div> -->
         </div>
     </ul>
 </div>
