--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -1,6 +1,6 @@
 <!-- <p>quote works!</p> -->
 <div class="container">
-    <!-- <h2>Quotes</h2> -->
+    <h2>List of Quotes</h2>
     <hr>
 
     <ul>
@@ -13,16 +13,13 @@
                     </li>
                     <button (click)="upvote(i)" class="btn btn-primary btn-xs">
                         <i class="up"></i>{{ quote.upvotes }}<img src="https://clipart.info/images/ccovers/1513313791facebook-circle-heart-love-png.png"
-                            height="35" width="35">
+                            height="30" width="30">
                     </button> &nbsp;&nbsp;
                     <button (click)="downvote(i)" class="btn btn-danger btn-xs">
                         <i class="down"></i>{{ quote.downvotes }} <img src="http://www.pngmart.com/files/5/Broken-Heart-PNG-Transparent-Image.png"
-                            height="35" width="35">
+                            height="30" width="30">
                     </button> &nbsp;&nbsp;
                     <app-quote-detail [quote]='quote' (isComplete)='deleteQuote($event,i)'></app-quote-detail>
-
-                    <!-- <button (click)='quoteDelete(true)' class="btn btn-outline-danger">Delete Quote</button> -->
-
                     <app-quote-detail *ngIf="quote.showDescription" [quote]='quote' (isComplete)='deleteQuote($event,i)'></app-quote-detail>
 
                 </div>
