Add upvote button

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
   <img width="300" alt="Quote Logo" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRj2xoXVr5ka-ux21iZ7jqI0j8jXcHHFZHqhwW4EMFSTJ1Tdcd_bg">
   
     <h1 class="tit">
-      ....This form is used to expose {{ title }} of your choice....
+      This form is used to expose {{ title }} of your choice
     </h1>
   </div>
   
