--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -10,15 +10,24 @@
 
                     <li>
                         {{quote.name}}
+                        <br>
+                        <button (click)="upvote(i)" class="btn btn-primary btn-xs">
+                                <i class="up"></i>{{ quote.upvotes }}<img src="https://techjoomla.com/media/zoo/images/jlike_0110c7a06bb71e822e51e2856e577fda.png"
+                                    height="30" width="30">
+                            </button> &nbsp;&nbsp;
+                            <button (click)="downvote(i)" class="btn btn-danger btn-xs">
+                                <i class="down"></i>{{ quote.downvotes }} <img src="http://www.pngmart.com/files/5/Broken-Heart-PNG-Transparent-Image.png"
+                                    height="30" width="30">
+                            </button> &nbsp;&nbsp;
                     </li>
-                    <button (click)="upvote(i)" class="btn btn-primary btn-xs">
+                    <!-- <button (click)="upvote(i)" class="btn btn-primary btn-xs">
                         <i class="up"></i>{{ quote.upvotes }}<img src="https://clipart.info/images/ccovers/1513313791facebook-circle-heart-love-png.png"
                             height="30" width="30">
                     </button> &nbsp;&nbsp;
                     <button (click)="downvote(i)" class="btn btn-danger btn-xs">
                         <i class="down"></i>{{ quote.downvotes }} <img src="http://www.pngmart.com/files/5/Broken-Heart-PNG-Transparent-Image.png"
                             height="30" width="30">
-                    </button> &nbsp;&nbsp;
+                    </button> &nbsp;&nbsp; -->
                     <app-quote-detail [quote]='quote' (isComplete)='deleteQuote($event,i)'></app-quote-detail>
                     <app-quote-detail *ngIf="quote.showDescription" [quote]='quote' (isComplete)='deleteQuote($event,i)'></app-quote-detail>
 
