Add downvote button

--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -15,8 +15,8 @@
                                 <i class="up"></i>{{ quote.upvotes }}<img src="https://techjoomla.com/media/zoo/images/jlike_0110c7a06bb71e822e51e2856e577fda.png"
                                     height="30" width="30">
                             </button> &nbsp;&nbsp;
-                            <button (click)="downvote(i)" class="btn btn-danger btn-xs">
-                                <i class="down"></i>{{ quote.downvotes }} <img src="http://www.pngmart.com/files/5/Broken-Heart-PNG-Transparent-Image.png"
+                            <button (click)="downvote(i)" class="btn btn-primary btn-xs">
+                                <i class="down"></i>{{ quote.downvotes }} <img src="https://previews.123rf.com/images/alexwhite/alexwhite1503/alexwhite150305013/38144639-dislike-green-flat-icon-thumb-down-sign.jpg"
                                     height="30" width="30">
                             </button> &nbsp;&nbsp;
                     </li>
