--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
-@import "~bootstrap/dist/css/bootstrap.css"
+@import "~bootstrap/dist/css/bootstrap.css";
 
+@import url('https://fonts.googleapis.com/css?family=EB+Garamond&display=swap');
+body{
+    font-family: 'EB Garamond', serif;
+}
