Activate vote buttons

--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -22,7 +22,7 @@
 
             <div class="">
                 <label for="author">Author of the quote</label>
-                <input type="text" class="form-control" id="author" [(ngModel)]="newQuote.author" name="author" #name="ngModel"
+                <input type="text" class="form-control" id="author" [(ngModel)]="newQuote.author" name="author" #author="ngModel"
                     required>
             </div>
             <br>
