--- a/src/app/quote-detail/quote-detail.component.html
+++ b/src/app/quote-detail/quote-detail.component.html
@@ -2,6 +2,6 @@
 <!-- <p>
     {{quote.name}}
 </p> -->
-<p>{{quote.description}}</p>
-<p>This quote has been created in {{goal.completeDate|dateCount}} days</p>
+<p>{{quote.name}}</p>
+<p>This quote has been posted in {{quote.completeDate|dateCount}} days</p>
 <button (click)= 'quoteDelete(true)'>Delete Quote</button>
