--- a/src/app/quote-detail/quote-detail.component.html
+++ b/src/app/quote-detail/quote-detail.component.html
@@ -3,5 +3,5 @@
     {{quote.name}}
 </p> -->
 <!-- <p>{{quote.name}}</p> -->
-<p><i>This quote has been posted in {{quote.completeDate|dateCount}} days</i></p>
+<p><i> Posted {{quote.completeDate|dateCount}} days ago</i></p>
 <button (click)= 'quoteDelete(true)'>Delete Quote</button>
