--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -9,7 +9,7 @@
                 <div *ngFor='let quote of quotes;let i = index'>
 
                     <li>
-                        {{quote.name}}, Author: {{quote.author}}, is posted by {{quote.user}} on
+                        ---{{quote.name}}---  Author: {{quote.author}},   Posted by {{quote.user}} on
                         {{quote.completeDate|date}}
                         <br>
                         <button (click)="upvote(i)" class="btn btn-primary btn-xs">
