--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,9 +5,9 @@
     height: max-content;
     /* width: 1450px; */
 /* } */ 
-/* .tit{
+.tit{
     padding-top: 7%;
-} */
+}
 .q{
     padding-left: 3%;
 }
