--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -1,6 +1,6 @@
 <!-- <p>quote works!</p> -->
 <div class="container">
-    <h2>List of Quotes</h2>
+    <!-- <h2>List of Quotes</h2> -->
     <hr>
 
     <ul>
